<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/home" />
    
    <item
        android:id="@+id/navigation_saved"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/saved" />
    
    <item
        android:id="@+id/navigation_tracker"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/tracker" />
    
    <item
        android:id="@+id/navigation_ai"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/ai_interview" />
    
    <item
        android:id="@+id/navigation_analytics"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/analytics" />
</menu>
